2008-10-21  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Removed common stuff in order to reduce duplication with
	other Makefiles.

2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Added support for generating the documentation files to
	the build process.

2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/index.xml, doc/ns-Gendarme.Rules.Performance.xml,
	doc/Gendarme.Rules.Performance: With the new code in the Makefiles we
	don't need to keep the documentation files in the repository.

2008-10-15  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/: Initial import documentation for the rules which belongs to this
	category.

2008-10-13  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRepetitiveCastsRule.cs: Fix XML documentation.
	* ConsiderCustomAccessorsForNonVisibleEventsRule.cs: Add XML
	documentation.
	* EmptyDestructorRule.cs: Renamed to RemoveUnneededFinalizerRule.
	Now consider a finalizer empty if it only nullify fields. Add XML 
	documentation and [FxCopCompatibility] attribute.
	* IDisposableWithDestructorWithoutSuppressFinalizeRule.cs:
	Renamed to UseSuppressFinalizeOnIDisposableTypeWithFinalizerRule. Add 
	XML documentation. Check both Dipose (implicit and explicit) when the
	two methods are present. Use OpCodeEngine to skip Dispose that do not
	contains any call[virt] instructions.
	* ImplementEqualsTypeRule.cs: Add XML documentation. Under 2.0 or
	later suggest implementing IEquatable<T> (for the same end result).
	* OverrideValueTypeDefaultsRule.cs: Add [FxCopCompatibility] 
	attribute.
	* RemoveUnusedLocalVariablesRule.cs: Add XML documentation 
	and [FxCopCompatibility] attribute. Use recent GetVariable rock to
	simplify the logic.

2008-10-12  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnusedPrivateFieldsRule.cs: : Add XML documentation 
	and [FxCopCompatibility] attribute. Use OpCodeEngine to	skip methods
	without instruction that involves fields. Ignore delegates.